# tello_swarm

swarm_interfaces/: CMakeLists.txt  package.xml
swarm_interfaces/msg/: MarkerHeartbeat.msg  MarkerInfo.msg  MarkerRegistry.msg
swarm_interfaces/srv/: MarkLanded.srv  QueryTurn.srv  ReportFailure.srv  SignalComplete.srv
tello_swarm/: CMakeLists.txt  package.xml
tello_swarm/config/: swarm_params.yaml
tello_swarm/include/tello_swarm/: landing_server.hpp  marker_manager.hpp  swarm_trigger_base.hpp  takeoff_server.hpp  waypoint_server.hpp
tello_swarm/launch/: swarm_servers_launch.py
tello_swarm/src/: landing_server.cpp  marker_manager.cpp  swarm_trigger_base.cpp  takeoff_server.cpp  waypoint_server.cpp
